test/sema/generic-arg-infer-conflict.delta
// RUN: %check_errors %not %delta -typecheck %s

void foo<T>(T a, T b) { }

// CHECK: [[@LINE+1]]:18: error: couldn't infer generic parameter 'T' of 'foo' because of conflicting argument types 'int' and 'bool'
void main() { foo(1, false) }
